--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
-    "next": "15.5.5",
+    "next": "^15.5.7",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
